# Auto-GPT-Benchmarks

./: .env.example  .gitignore  .gitmodules  README.md  benchmarks_setup.bat  evals_analytics.ipynb  main.py  match_records.py  mychanges.patch  pyproject.toml  pytest.ini  regression_tests.json  requirements-test.txt  requirements.txt  run.sh  send_to_googledrive.py  setup.cfg  visualizations.ipynb
.github/workflows/: autogpt.yml  ci.yml  mini-agi.yml  pr_agent.yml  superagi.yml
agbenchmark/: README.md  ReportManager.py  agent_api_interface.py  agent_interface.py  challenge.py  config.json  conftest.py  generate_test.py  internal_info.json  regression_tests.json  start_benchmark.py  utils.py
agbenchmark/challenges/: README.md  data_types.py  define_task_types.py  run_all_test.py  test_all.py
agbenchmark/reports/: 1.json  3_TestReturnCode.json  ReportManager.py  file2_07-16-17-10.json  file2_07-16-17-28.json  file3_07-16-17-10.json  file3_07-16-17-28.json  internal_info.json  reports.py  types.py  utils.py
agbenchmark/utils/: challenge.py  get_data_from_helicone.py  patch_requests.py  proxy.py  (+2 more)
auto-gpt-benchmarks/: Challenge.py  config.json  conftest.py  start_benchmark.py
auto_gpt_benchmarking/: AutoGPTAgent.py  CompletionFn.py  Evaluator.py  __main__.py  constants.py
backend/: main.py
config/: ai_settings.yaml  logging.yaml
examples/: basic_gpt_agent.py
notebooks/: LLM Score Experimentation.ipynb  Visualization.ipynb  over_time.ipynb  report_visual.ipynb
paper/: agent_action_regex.py  all_data_jsons.json  analysis.ipynb  combined_data.ipynb  data.ipynb  monitor.ipynb  prompt_iteration.ipynb  run_status_log.txt  status_log.txt  visualizations.ipynb
(+7534 files in other folders)
