[metadata]
name = autogpt-benchmarking
version = attr: autogpt.benchmarks.__version__
long_description = file: README.md, LICENSE
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages=find:
package_dir=
    = src

python_requires= >=3.8
include_package_data = True
install_requires = file: requirements.txt
tests_require = file: requirements-test.txt
zip_safe = False

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md, *.yaml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"



[flake8]
format = pylint
max-complexity = 6
max-doc-length = 88
max-line-length = 88

exclude =
    .git
    .env
    .scratch
    .venv
    __pycache__
    build
    dist
    docs
    env
    venv

extend-ignore = 
    # E111: indentation is not a multiple of four
    # E201: whitespace after '('
    # E202: whitespace before ')'
    # E203: whitespace before ',', ';', or ':'
    # E265: block comment should start with '# '
    # E401: multiple imports on one line
    # E701: multiple statements on one line (:)
    # E702: multiple statements on one line (;)
    # E731: do not assign a lambda expression, use a def
    # F403: 'from module import *' used; unable to detect undefined names
    E111, E201, E202, E203, E265, E401, E701, E702, E731, F403

[isort]
profile = black

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
    integration
